--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,8 +12,6 @@ services:
       POSTGRES_DB: soniarose
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U soniarose"]
       interval: 10s
@@ -30,8 +28,6 @@ services:
     command: redis-server --appendonly yes
     volumes:
       - redis-data:/data
-    ports:
-      - "6379:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -68,8 +64,6 @@ services:
       # App config
       NODE_ENV: production
       PORT: 3001
-    ports:
-      - "3001:3001"
     networks:
       - soniarose-network
     healthcheck:
@@ -79,7 +73,7 @@ services:
       retries: 3
       start_period: 40s
 
-  # Next.js Web App
+  # Next.js Web App (serves both landing page and CRM via route groups)
   web:
     image: ghcr.io/pistonsolutions/soniarose-web:latest
     container_name: soniarose-web
@@ -88,8 +82,8 @@ services:
       api:
         condition: service_healthy
     environment:
-      # API endpoint (internal Docker network)
-      NEXT_PUBLIC_API_URL: http://api:3001/api
+      # API endpoint (nginx will route /api to api service)
+      NEXT_PUBLIC_API_URL: /api
 
       # Clerk (public keys are safe to expose)
       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
@@ -97,8 +91,6 @@ services:
       # App config
       NODE_ENV: production
       PORT: 3000
-    ports:
-      - "3000:3000"
     networks:
       - soniarose-network
     healthcheck:
@@ -107,6 +99,27 @@ services:
       timeout: 5s
       retries: 3
       start_period: 40s
+
+  # Nginx reverse proxy
+  nginx:
+    image: nginx:alpine
+    container_name: soniarose-nginx
+    restart: unless-stopped
+    depends_on:
+      - api
+      - web
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - soniarose-network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
 
 networks:
   soniarose-network:
