--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -34,6 +34,8 @@
     ".next/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/_disabled_*",
+    "**/_disabled_*/**"
   ]
 }
