fix: remove unused imports in WorkflowsPage

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "nest build",
     "dev": "nest start --watch",
-    "lint": "eslint src --ext .ts --max-warnings=0",
+    "lint": "eslint src --max-warnings=0",
     "start": "node dist/main.js",
     "test": "jest --config jest.config.ts --runInBand"
   },
