--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "lint": "eslint app --ext .ts,.tsx --max-warnings=0",
+    "lint": "eslint app --max-warnings=0",
     "start": "next start",
     "test": "echo 'tests pending'"
   },
