--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "soniarose",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "packageManager": "pnpm@9.0.0",
   "scripts": {
     "build": "turbo run build",
