--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,15 +91,24 @@ jobs:
             # Navigate to app directory
             cd ~/soniarose || mkdir -p ~/soniarose && cd ~/soniarose
 
-            # Create .env file with secrets
-            cat > .env << EOF
-            DATABASE_PASSWORD=${DATABASE_PASSWORD}
-            TELNYX_API_KEY=${TELNYX_API_KEY}
-            TELNYX_PUBLIC_KEY=${TELNYX_PUBLIC_KEY}
             TELNYX_PHONE_NUMBER=${TELNYX_PHONE_NUMBER}
             CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
             NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
             EOF
+
+            # Configure Swap to prevent OOM on micro instance
+            if [ ! -f /swapfile ]; then
+              echo "Creating 2GB swap file..."
+              sudo fallocate -l 2G /swapfile
+              sudo chmod 600 /swapfile
+              sudo mkswap /swapfile
+              sudo swapon /swapfile
+              echo "/swapfile none swap sw 0 0" | sudo tee -a /etc/fstab
+              echo "Swap created."
+              free -h
+            else
+              echo "Swap file already exists."
+            fi
 
             # Download production configuration files
             curl -s -o docker-compose.prod.yml https://raw.githubusercontent.com/${{ github.repository }}/main/docker-compose.prod.yml
