--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,7 +94,7 @@ jobs:
             TELNYX_PHONE_NUMBER=${TELNYX_PHONE_NUMBER}
             CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
             NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-            EOF
+EOF
 
             # Configure Swap to prevent OOM on micro instance
             if [ ! -f /swapfile ]; then
@@ -117,8 +117,19 @@ jobs:
             # Install Docker if not installed
             if ! command -v docker &> /dev/null; then
               echo "Installing Docker..."
+              # Remove conflicting packages
+              sudo dnf remove -y podman buildah || true
+              
+              # Install required utils
+              sudo dnf install -y dnf-plugins-core
+
+              # Add Docker repo
               sudo dnf config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+              
+              # Install Docker
               sudo dnf install -y docker-ce docker-ce-cli containerd.io docker-compose-plugin
+              
+              # Start and enable Docker
               sudo systemctl start docker
               sudo systemctl enable docker
               sudo usermod -aG docker $USER
