--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -4,8 +4,17 @@
     "outDir": "dist",
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": [
+      "node"
+    ]
   },
-  "include": ["src/**/*", "prisma/**/*"],
-  "exclude": ["dist", "node_modules"]
+  "include": [
+    "src/**/*",
+    "prisma/**/*"
+  ],
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
