--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -91,10 +91,15 @@ jobs:
             # Navigate to app directory
             cd ~/soniarose || mkdir -p ~/soniarose && cd ~/soniarose
 
+            # Create .env file
+            cat > .env << 'ENVEOF'
+            DATABASE_URL=postgresql://postgres:${DATABASE_PASSWORD}@db:5432/soniarose
+            TELNYX_API_KEY=${TELNYX_API_KEY}
+            TELNYX_PUBLIC_KEY=${TELNYX_PUBLIC_KEY}
             TELNYX_PHONE_NUMBER=${TELNYX_PHONE_NUMBER}
             CLERK_SECRET_KEY=${CLERK_SECRET_KEY}
             NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
-EOF
+ENVEOF
 
             # Configure Swap to prevent OOM on micro instance
             if [ ! -f /swapfile ]; then
