--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "prisma generate && tsc -p tsconfig.json",
+    "build": "prisma generate && tsc -p tsconfig.json && cp -r src/generated dist/",
     "generate": "prisma generate",
     "migrate": "prisma migrate dev",
     "lint": "eslint src prisma --max-warnings=0",
