--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -87,6 +87,9 @@ services:
 
       # Clerk (public keys are safe to expose)
       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY}
+      
+      # Clerk secret key for server-side auth
+      CLERK_SECRET_KEY: ${CLERK_SECRET_KEY}
 
       # App config
       NODE_ENV: production
