fix: install ffmpeg for media service

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -64,6 +64,9 @@ FROM base AS runner
 
 WORKDIR /app
 
+# Install runtime dependencies
+RUN apk add --no-cache ffmpeg
+
 # Create non-root user
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nestjs
